Add media queries to hide some content on mobile

--- a/src/components/Deadlines/style.css
+++ b/src/components/Deadlines/style.css
@@ -1,3 +1,11 @@
 .Deadlines {
   margin: 10px;
 }
+.hideMobile {
+  display: none;
+}
+@media (min-width: 40.0rem) {
+  td.hideMobile, th.hideMobile {
+      display: table-cell;
+  }
+}
